Allow explicity disabling of timezone updates

--- a/test/ical4j.properties
+++ b/test/ical4j.properties
@@ -33,6 +33,8 @@
 
 #net.fortuna.ical4j.timezone.registry=net.fortuna.ical4j.model.DefaultTimeZoneRegistryFactory
 
+#net.fortuna.ical4j.timezone.update.enabled={true|false}
+
 #net.fortuna.ical4j.factory.decoder=net.fortuna.ical4j.util.DefaultDecoderFactory
 
 #net.fortuna.ical4j.factory.encoder=net.fortuna.ical4j.util.DefaultEncoderFactory
