Allow floating timezone for date instances

--- a/test/ical4j.properties
+++ b/test/ical4j.properties
@@ -35,6 +35,8 @@
 
 #net.fortuna.ical4j.timezone.update.enabled={true|false}
 
+#net.fortuna.ical4j.timezone.date.floating={true|false}
+
 #net.fortuna.ical4j.factory.decoder=net.fortuna.ical4j.util.DefaultDecoderFactory
 
 #net.fortuna.ical4j.factory.encoder=net.fortuna.ical4j.util.DefaultEncoderFactory
