--- a/test/ical4j.properties
+++ b/test/ical4j.properties
@@ -41,6 +41,8 @@
 
 #net.fortuna.ical4j.factory.encoder=net.fortuna.ical4j.util.DefaultEncoderFactory
 
+#net.fortuna.ical4j.recur.maxincrementcount=1000
+
 #ical4j.unfolding.relaxed={true|false}
 
 #ical4j.parsing.relaxed={true|false}
