--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,11 @@
             <version>1.0-rc-5</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+        	<groupId>backport-util-concurrent</groupId>
+        	<artifactId>backport-util-concurrent</artifactId>
+        	<version>3.1</version>
+        </dependency>
 	</dependencies>
 
 	<repositories>
