Applied fix for #2936511 (Refactored javadoc templates)

--- a/pom.xml
+++ b/pom.xml
@@ -86,10 +86,7 @@
 				</excludes>
 			</resource>
 			<resource>
-				<directory>source</directory>
-				<includes>
-					<include>overview.html</include>
-				</includes>
+				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
