--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
 				http://www.osafoundation.org
 			</organizationUrl>
 		</contributor>
+		<contributor>
+			<name>Arnaud Quillaud</name>
+			<organization>Oracle Inc.</organization>
+			<organizationUrl>
+                http://www.oracle.com
+            </organizationUrl>
+		</contributor>
 	</contributors>
 
 	<!-- <distributionManagement> <relocation> <groupId>net.fortuna.ical4j</groupId> 
@@ -171,7 +178,7 @@
 			<plugin>
 				<groupId>org.codehaus.gmaven</groupId>
 				<artifactId>gmaven-plugin</artifactId>
-				<version>1.2</version>
+				<version>${gmaven.version}</version>
 				<configuration>
 					<providerSelection>1.6</providerSelection>
 				</configuration>
@@ -179,7 +186,7 @@
 					<dependency>
 						<groupId>org.codehaus.gmaven.runtime</groupId>
 						<artifactId>gmaven-runtime-1.6</artifactId>
-						<version>1.2</version>
+						<version>${gmaven.version}</version>
 						<exclusions>
 							<exclusion>
 								<groupId>org.codehaus.groovy</groupId>
@@ -190,7 +197,7 @@
 					<dependency>
 						<groupId>org.codehaus.groovy</groupId>
 						<artifactId>groovy-all</artifactId>
-						<version>1.6.9</version>
+						<version>${groovy.version}</version>
 					</dependency>
 				</dependencies>
 				<executions>
@@ -237,7 +244,7 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>1.6.9</version>
+			<version>${groovy.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -248,8 +255,14 @@
 		<dependency>
 			<groupId>org.spockframework</groupId>
 			<artifactId>spock-core</artifactId>
-			<version>0.5-groovy-1.6</version>
+			<version>0.5-groovy-1.7</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>1.8.4</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
@@ -350,4 +363,9 @@
 			</plugin>
 		</plugins>
 	</reporting>
+    
+    <properties>
+        <groovy.version>1.6.9</groovy.version>
+        <gmaven.version>1.3</gmaven.version>
+    </properties>
 </project>
