--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>ical4j</artifactId>
 	<packaging>bundle</packaging>
 	<name>iCal4j</name>
-	<version>1.0.1-SNAPSHOT</version>
+	<version>1.0</version>
 	<description>
 		A Java library for reading and writing iCalendar (*.ics) files
 	</description>
@@ -34,6 +34,7 @@
 		<developerConnection>scm:cvs:ext:fortuna@ical4j.cvs.sourceforge.net:/cvsroot/ical4j:iCal4j
 		</developerConnection>
 		<url>http://ical4j.cvs.sourceforge.net/ical4j/iCal4j</url>
+    <tag>ical4j-1_0</tag>
   </scm>
 
 	<contributors>
@@ -312,6 +313,7 @@
 			</plugin>
 
 			<!-- Override default suppressions.. -->
+<!-- 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
@@ -322,6 +324,7 @@
 					</suppressionsFile>
 				</configuration>
 			</plugin>
+ -->
 <!-- 
 			<plugin>
 				<artifactId>maven-clover-plugin</artifactId>
