--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<version>1.0.11</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>net.fortuna.ical4j</groupId>
+	<groupId>org.mnode.ical4j</groupId>
 	<artifactId>ical4j</artifactId>
 	<packaging>bundle</packaging>
 	<name>iCal4j</name>
