--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<parent>
-		<artifactId>modularity-parent</artifactId>
-		<groupId>net.modularity</groupId>
-		<version>1.0.11</version>
+		<artifactId>mnode-parent</artifactId>
+		<groupId>org.mnode</groupId>
+		<version>1.1-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
 	<artifactId>ical4j</artifactId>
 	<packaging>bundle</packaging>
-	<name>iCal4j</name>
+	<name>ical4j</name>
 	<version>1.0.2-SNAPSHOT</version>
 	<description>
 		A Java library for reading and writing iCalendar (*.ics) files
