--- a/pom.xml
+++ b/pom.xml
@@ -271,9 +271,9 @@
 
 	<repositories>
 		<repository>
-			<id>modularity-releases</id>
-			<name>Modularity Maven Repository</name>
-			<url>http://m2.modularity.net.au/releases</url>
+			<id>mnode-releases</id>
+			<name>Micronode Maven Repository</name>
+			<url>http://build.mnode.org/releases</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -282,9 +282,9 @@
 			</snapshots>
 		</repository>
 		<repository>
-			<id>modularity-snapshots</id>
-			<name>Modularity Snapshot Repository</name>
-			<url>http://m2.modularity.net.au/snapshots</url>
+			<id>mnode-snapshots</id>
+			<name>Micronode Snapshot Repository</name>
+			<url>http://build.mnode.org/snapshots</url>
 			<releases>
 				<enabled>false</enabled>
 			</releases>
