--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>mnode-parent</artifactId>
 		<groupId>org.mnode</groupId>
-		<version>1.1</version>
+		<version>1.2-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
@@ -61,11 +61,7 @@
             </organizationUrl>
 		</contributor>
 	</contributors>
-
-	<!-- <distributionManagement> <relocation> <groupId>net.fortuna.ical4j</groupId> 
-		<artifactId>ical4j</artifactId> <version>1.0-beta5</version> <message> Updated 
-		group id to conform with maven standards </message> </relocation> </distributionManagement> -->
-
+    
 	<build>
 		<resources>
 			<resource>
@@ -295,6 +291,9 @@
                     <overview>
                         ${project.build.outputDirectory}/overview.html
                     </overview>
+                    <links>
+                        <link>http://download.oracle.com/javase/1.4.2/docs/api/</link>
+                    </links>
                 </configuration>
             </plugin>
 
@@ -315,7 +314,7 @@
                     <propertyExpansion>checkstyle.suppressions.file=etc/checkstyle-suppressions.xml</propertyExpansion>
                 </configuration>
             </plugin>
-        
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
@@ -323,12 +322,11 @@
                     <linkXref>true</linkXref>
                     <targetJdk>1.4</targetJdk>
                     <rulesets>
-                        <ruleset>http://svn.mnode.org/tools/pmd/mnode_ruleset.xml
-                        </ruleset>
+                        <ruleset>http://svn.mnode.org/tools/pmd/mnode_ruleset.xml</ruleset>
                     </rulesets>
                 </configuration>
             </plugin>
-
+ 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
@@ -345,6 +343,7 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
             </plugin>
+ 
 <!-- 
 			<plugin>
 				<artifactId>maven-clover-plugin</artifactId>
@@ -358,15 +357,17 @@
 				</configuration>
 			</plugin>
  -->
+ <!-- XXX: disabled for initial mnode release
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>clirr-maven-plugin</artifactId>
 				<configuration>
 					<minSeverity>info</minSeverity>
-					<comparisonVersion>1.0</comparisonVersion>
+					<comparisonVersion>1.0.1</comparisonVersion>
 				</configuration>
 			</plugin>
-			
+ -->
+<!-- XXX: we don't really need to generate a changelog as hgweb has a pretty good one by default
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-changelog-plugin</artifactId>
@@ -376,7 +377,7 @@
 				<reportSets>
 					<reportSet>
 						<id>changelog</id>
-						<!-- 
+						<!-
 						<configuration>
 							<type>tag</type>
 							<tags>
@@ -388,16 +389,17 @@
 								</tag>
 							</tags>
 						</configuration>
-						 -->
+						 ->
 						<reports>
 							<report>changelog</report>
 						</reports>
 					</reportSet>
 				</reportSets>
 			</plugin>
+ -->
 		</plugins>
 	</reporting>
-    
+
     <properties>
         <groovy.version>1.6.9</groovy.version>
         <gmaven.version>1.3</gmaven.version>
