--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	<scm>
 		<connection>scm:hg:http://ical4j.hg.sourceforge.net:8000/hgroot/ical4j/ical4j
 		</connection>
-		<developerConnection>scm:hg:ssh://ical4j.hg.sourceforge.net/hgroot/ical4j/ical4j
+		<developerConnection>scm:hg:ssh://fortuna@ical4j.hg.sourceforge.net/hgroot/ical4j/ical4j
 		</developerConnection>
 		<url>http://ical4j.hg.sourceforge.net/hgweb/ical4j/ical4j/</url>
   </scm>
