--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<groupId>org.mnode.ical4j</groupId>
 	<artifactId>ical4j</artifactId>
 	<packaging>bundle</packaging>
-	<name>ical4j</name>
+	<name>iCal4j</name>
 	<version>1.0.3-SNAPSHOT</version>
 	<description>
 		A Java library for reading and writing iCalendar (*.ics) files
