--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 	<parent>
 		<artifactId>mnode-parent</artifactId>
 		<groupId>org.mnode</groupId>
-		<version>1.3-SNAPSHOT</version>
+		<version>1.3</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
 	<artifactId>ical4j</artifactId>
 	<packaging>bundle</packaging>
 	<name>iCal4j</name>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>2.0-SNAPSHOT</version>
 	<description>
 		A Java library for reading and writing iCalendar (*.ics) files
 	</description>
@@ -85,6 +85,7 @@
 		</resources>
 
 		<plugins>
+<!-- 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -95,6 +96,7 @@
 					</testExcludes>
 				</configuration>
 			</plugin>
+ -->
 
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -125,23 +127,7 @@
 					</instructions>
 				</configuration>
 			</plugin>
-<!-- 
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-clover-plugin</artifactId>
-				<configuration>
-					<jdk>1.4</jdk>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>pre-site</phase>
-						<goals>
-							<goal>instrument</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
- -->
+
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
@@ -164,37 +150,6 @@
 			<plugin>
 				<groupId>org.codehaus.gmaven</groupId>
 				<artifactId>gmaven-plugin</artifactId>
-				<version>${gmaven.version}</version>
-				<configuration>
-					<providerSelection>1.6</providerSelection>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.codehaus.gmaven.runtime</groupId>
-						<artifactId>gmaven-runtime-1.6</artifactId>
-						<version>${gmaven.version}</version>
-						<exclusions>
-							<exclusion>
-								<groupId>org.codehaus.groovy</groupId>
-								<artifactId>groovy-all</artifactId>
-							</exclusion>
-						</exclusions>
-					</dependency>
-					<dependency>
-						<groupId>org.codehaus.groovy</groupId>
-						<artifactId>groovy-all</artifactId>
-						<version>${groovy.version}</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generateStubs</goal>
-							<goal>compile</goal>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -228,8 +183,6 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
-			<version>${groovy.version}</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>backport-util-concurrent</groupId>
@@ -239,8 +192,6 @@
 		<dependency>
 			<groupId>org.spockframework</groupId>
 			<artifactId>spock-core</artifactId>
-			<version>0.5-groovy-1.6</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
@@ -269,9 +220,6 @@
                     <overview>
                         ${project.build.outputDirectory}/overview.html
                     </overview>
-                    <links>
-                        <link>http://download.oracle.com/javase/1.4.2/docs/api/</link>
-                    </links>
                 </configuration>
             </plugin>
 
@@ -322,19 +270,6 @@
                 <artifactId>findbugs-maven-plugin</artifactId>
             </plugin>
  
-<!-- 
-			<plugin>
-				<artifactId>maven-clover-plugin</artifactId>
-				<configuration>
-					<licenseLocation>
-						etc/clover.license
-					</licenseLocation>
-					<excludes>
-						<exclude>**/generated-stubs/**</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
- -->
  <!-- XXX: disabled for initial mnode release
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -377,9 +312,4 @@
  -->
 		</plugins>
 	</reporting>
-
-    <properties>
-        <groovy.version>1.6.9</groovy.version>
-        <gmaven.version>1.3</gmaven.version>
-    </properties>
 </project>
