--- a/pom.xml
+++ b/pom.xml
@@ -85,19 +85,6 @@
 		</resources>
 
 		<plugins>
-<!-- 
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.4</source>
-					<target>1.4</target>
-					<testExcludes>
-						<exclude>**/RegexTestHarness.java</exclude>
-					</testExcludes>
-				</configuration>
-			</plugin>
- -->
-
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
@@ -158,17 +145,17 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
-			<version>1.1.1</version>
+			<version>[1.1.1,)</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.5</version>
+			<version>[1.5,)</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
+			<version>[2.6,)</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -177,7 +164,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>1.4</version>
+			<version>[1.4,)</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -191,13 +178,13 @@
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>1.8.4</version>
+			<version>[1.8.4,)</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ccil.cowan.tagsoup</groupId>
 			<artifactId>tagsoup</artifactId>
-			<version>1.2</version>
+			<version>[1.2,)</version>
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -241,7 +228,7 @@
                 <artifactId>maven-pmd-plugin</artifactId>
                 <configuration>
                     <linkXref>true</linkXref>
-                    <targetJdk>1.4</targetJdk>
+                    <targetJdk>1.5</targetJdk>
                     <rulesets>
                         <ruleset>http://svn.mnode.org/tools/pmd/mnode_ruleset.xml</ruleset>
                     </rulesets>
