--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>mnode-parent</artifactId>
 		<groupId>org.mnode</groupId>
-		<version>1.3</version>
+		<version>1.4</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
@@ -34,7 +34,8 @@
 		<developerConnection>scm:hg:ssh://fortuna@ical4j.hg.sourceforge.net/hgroot/ical4j/ical4j
 		</developerConnection>
 		<url>http://ical4j.hg.sourceforge.net/hgweb/ical4j/ical4j/</url>
-  </scm>
+		<tag>ical4j-1.x-maintenance</tag>
+	</scm>
 
 	<contributors>
 		<contributor>
