Updated license info

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 	<licenses>
 		<license>
 			<name>iCal4j - License</name>
-			<url>LICENSE</url>
+			<url>http://mnode.org/projects/ical4j/license.html</url>
 		</license>
 	</licenses>
 
