--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>mnode-parent</artifactId>
 		<groupId>org.mnode</groupId>
-		<version>1.4</version>
+		<version>1.5</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
@@ -23,17 +23,15 @@
 	<inceptionYear>2004</inceptionYear>
 	<licenses>
 		<license>
-			<name>iCal4j - License</name>
-			<url>http://mnode.org/projects/ical4j/license.html</url>
+            <name>${pom.name} - License</name>
+			<url>${scm.url}/raw-file/tip/LICENSE</url>
 		</license>
 	</licenses>
 
 	<scm>
-		<connection>scm:hg:http://ical4j.hg.sourceforge.net:8000/hgroot/ical4j/ical4j
-		</connection>
-		<developerConnection>scm:hg:ssh://fortuna@ical4j.hg.sourceforge.net/hgroot/ical4j/ical4j
-		</developerConnection>
-		<url>http://ical4j.hg.sourceforge.net/hgweb/ical4j/ical4j/</url>
+		<connection>scm:hg:http://ical4j.hg.sourceforge.net:8000/hgroot/ical4j/ical4j</connection>
+		<developerConnection>scm:hg:ssh://fortuna@ical4j.hg.sourceforge.net/hgroot/ical4j/ical4j</developerConnection>
+		<url>http://ical4j.hg.sourceforge.net/hgweb/ical4j/ical4j</url>
 	</scm>
 
 	<contributors>
@@ -189,7 +187,6 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>generateStubs</goal>
 							<goal>compile</goal>
 							<goal>testCompile</goal>
 						</goals>
@@ -197,6 +194,42 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.gmaven
+										</groupId>
+										<artifactId>
+											gmaven-plugin
+										</artifactId>
+										<versionRange>
+											[1.3,)
+										</versionRange>
+										<goals>
+											<goal>testCompile</goal>
+											<goal>compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<dependencies>
@@ -284,6 +317,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
+                <!-- 
                 <configuration>
                     <configLocation>http://svn.mnode.org/tools/checkstyle/mnode_checks.xml</configLocation>
                     <suppressionsLocation>etc/checkstyle-suppressions.xml</suppressionsLocation>
@@ -291,6 +325,7 @@
                     <propertyExpansion>checkstyle.suppressions.file=etc/checkstyle-suppressions.xml</propertyExpansion>
                     <propertyExpansion>checkstyle.suppressions.file=etc/checkstyle-suppressions.xml</propertyExpansion>
                 </configuration>
+                 -->
             </plugin>
 
             <plugin>
