--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<artifactId>ical4j</artifactId>
 	<packaging>bundle</packaging>
 	<name>iCal4j</name>
-	<version>2.0-SNAPSHOT</version>
+	<version>2.0-beta1-SNAPSHOT</version>
 	<description>
 		A Java library for reading and writing iCalendar (*.ics) files
 	</description>
