--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>mnode-parent</artifactId>
 		<groupId>org.mnode</groupId>
-		<version>1.6</version>
+		<version>1.9</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mnode.ical4j</groupId>
@@ -172,7 +172,7 @@
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
 			<version>[1.8.4,)</version>
-			<scope>provided</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.ccil.cowan.tagsoup</groupId>
@@ -203,19 +203,9 @@
                 <artifactId>maven-surefire-report-plugin</artifactId>
             </plugin>
 
-            <!-- Override default suppressions.. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <!-- 
-                <configuration>
-                    <configLocation>http://svn.mnode.org/tools/checkstyle/mnode_checks.xml</configLocation>
-                    <suppressionsLocation>etc/checkstyle-suppressions.xml</suppressionsLocation>
-                    <suppressionsFileExpression>suppressions.file.mnode</suppressionsFileExpression>
-                    <propertyExpansion>checkstyle.suppressions.file=etc/checkstyle-suppressions.xml</propertyExpansion>
-                    <propertyExpansion>checkstyle.suppressions.file=etc/checkstyle-suppressions.xml</propertyExpansion>
-                </configuration>
-                 -->
             </plugin>
 
             <plugin>
